# Deadrop

./: .gitignore  Cargo.toml  README.md  build.rs  install.ps1  install.sh
.github/workflows/: release.yml
src/: archive.rs  config.rs  crypto.rs  lib.rs  main.rs  progress.rs  qr.rs  server.rs  store.rs  tor.rs  tunnel.rs
test-folder/: readme.txt
test-folder/docs/: config.txt
tests/: integrations.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: app.js  download-worker.js  index.html  style.css  upload-worker.js  upload.html  upload.js  worker.js
web/wasm/: deadrop_wasm.d.ts  deadrop_wasm.js  deadrop_wasm_bg.wasm  deadrop_wasm_bg.wasm.d.ts  package.json
