[package]
name = "deadrop"
version = "0.1.1"
edition = "2024"
description = "Zero-knowledge encrypted dead drop. One binary. One command. Gone."
license = "MIT"
repository = "https://github.com/Karmanya03/Deadrop"
readme = "README.md"
keywords = ["encryption", "file-sharing", "security", "dead-drop", "chacha20"]
categories = ["command-line-utilities", "cryptography"]

include = [
    "src/**/*",
    "web/**/*",
    "assets/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[[bin]]
name = "ded"
path = "src/main.rs"

[dependencies]
# Web server
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "compression-full", "set-header"] }
tower_governor = { version = "0.8", features = ["axum"] }

# Crypto
chacha20poly1305 = "0.10"
rand = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
base64 = "0.22"
argon2 = "0.5"
tar = "0.4"
flate2 = "1"
tokio-util = { version = "0.7", features = ["io"] }
tempfile = "3"

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
console = "0.16"

# QR code
qrcode = "0.14"

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
rust-embed = "8"
dashmap = "6"
bytesize = "2"
anyhow = "1"
colored = "3"
local-ip-address = "0.6"

# Platform-specific: memory locking
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
