[package]
name = "deadrop-wasm"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.4.1", features = ["wasm_js"] }
getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
chacha20poly1305 = "0.10"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
