[package]
name = "deadrop-wasm"
version = "0.1.2"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.4.1", features = ["wasm_js"] }
wasm-bindgen = "0.2"
chacha20poly1305 = "0.10"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
base64 = "0.22"
argon2 = "0.5"

zeroize = "1.3"

# X25519 ECDH support for deriving shared symmetric keys in WASM

# argon2 pulls getrandom 0.2.x via password-hash → rand_core.
# On wasm32-unknown-unknown, getrandom 0.2.x needs the "js" feature.
[dependencies.getrandom_02]
package = "getrandom"
version = "0.2"
features = ["js"]
